--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <meta property="og:locale:alternate" content="en_US" />
     <!-- Talwind css -->
     <link rel="stylesheet" href="src/output.css" />
+    <!-- splide -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
+    />
     <!-- AlpineJs  -->
     <script
       defer
@@ -40,6 +45,7 @@
           src="assets/img/logo.svg"
           class="w-[91px] h-[32px] md:w-[188px] md:h-[66px]"
           alt="logo"
+          loading="lazy"
         />
 
         <!-- Nav -->
@@ -76,25 +82,27 @@
               src="assets/img/ArrowLeft.svg"
               class="bg-[var(--bg-rw)] rounded-full row-img"
               alt=" arrow button"
+              loading="lazy"
           /></a>
         </div>
       </div>
     </header>
 
     <!-- End Header  -->
-    <main>
+    <main class="w-full bg-[#EBEAF3]">
       <!-- Start Section Hero  -->
       <section id=" hero" class="hero relative">
         <img
           src="assets/img/programming-user-code--Streamline-Freehand.svg"
           class="absolute -top-12 right-4"
-          alt=""
+          loading="lazy"
+          alt="icon user"
         />
         <div class="container md:m-20 my-8">
           <div
             class="flex md:flex-row flex-col items-center justify-between align-center"
           >
-            <div class="text-right">
+            <div class="text-right relative">
               <h1>
                 من
                 <span class="text-[#5f56d1]"> طفل عادي </span>
@@ -134,22 +142,24 @@
               </div>
               <div class="flex flex-row gap-3">
                 <a
-                  class="flex flex-row items-center btn button btn-primary bg-white text-[var(--text-color)] btn-sm"
+                  class="flex flex-row items-center btn button btn-primary button-pr btn-sm"
                 >
                   أبدأ رحلته الرقمية اليوم
                   <img
                     src="assets/img/ArrowLeft.svg"
                     class="bg-[var(--bg-rw)] rounded-full row-img"
                     alt=" arrow button"
+                    loading="lazy"
                 /></a>
                 <a
-                  class="flex flex-row items-center btn button btn-primary button-pr btn-sm"
+                  class="flex flex-row items-center font-bold btn button btn-primary bg-transparent text-[var(--text-color)] btn-sm"
                 >
                   سعر باقات نينجاكو
                   <img
                     src="assets/img/ArrowLeft.svg"
                     class="bg-[var(--bg-rw)] rounded-full row-img"
                     alt=" arrow button"
+                    loading="lazy"
                 /></a>
               </div>
             </div>
@@ -159,6 +169,7 @@
                 src="assets/img/ninja-boy.webp"
                 class="bg-cover"
                 alt="ninjaco"
+                loading="lazy"
               />
             </div>
           </div>
@@ -166,18 +177,25 @@
         <img
           src="assets/img/android-logo-62.svg"
           class="absolute bottom-[-4rem] left-5"
-          alt=""
+          alt="android logo"
+          loading="lazy"
         />
       </section>
       <!-- End Section Hero  -->
       <!-- Start Section About  -->
       <section
         id="about"
-        class="about bg-[#CECAFF] w-full py-20 overflow-hidden"
+        class="about bg-[#CECAFF] w-full py-14 md:py20 overflow-hidden relative"
       >
+        <img
+          src="assets/img/hand.svg"
+          class="absolute top-[8rem] right-0"
+          alt="icon hand"
+          loading="lazy"
+        />
         <div class="container text-center">
           <div
-            class="text-about flex flex-col items-center text-center justify-center gap-6"
+            class="text-about relative flex flex-col items-center text-center justify-center gap-6"
           >
             <h1 class="text-center md:text-[36px] text-[20px]">
               نينجاكو … أكاديمية تكنولوجية تصنع <span>نينجا المستقبل!</span>
@@ -189,7 +207,7 @@
             </p>
           </div>
           <div
-            class="cards-about grid grid-cols-2 md:grid-cols-4 gap-6 md:gap-12 pt-6 my-8"
+            class="cards-about grid grid-cols-2 md:grid-cols-4 gap-6 md:gap-12 pt-6 my-12"
           >
             <div class="card">
               <div class="img flex items-center justify-center">
@@ -261,10 +279,161 @@
             </div>
           </div>
         </div>
+        <img src="assets/img/light.svg" class="absolute bottom-[15rem] left-4"
+        alt="ligt icon" loading="lazy />
       </section>
       <!-- End Section About  -->
       <!-- Start Section Skills  -->
-      <section class="skills"></section>
+      <section class="skill py-12 md:py20 bg-[#FBFBFB]">
+        <div class="container">
+          <div class="text-center my-6">
+            <h1 class="text-center md:text-[30px] text-[18px]">
+              رحلة نينجاكو تبدأ بالفضول،
+              <span> تتغذى بالشغف، </span>
+              وتنمو إلى مهارة حقيقية ...
+            </h1>
+            <p class="md:text-2xl text-base my-2">“اختر المستوى المناسب ”</p>
+          </div>
+          <!-- Box icons -->
+          <div class="icons-ninja">
+            <ul
+              class="flex flex-row flex-wrap gap-6 md:gap-12 items-center justify-center"
+              aria-label="مميزات نينجاكو"
+            >
+              <li class="w-20 md:w-32 h-20 md:h-32">
+                <img
+                  src="assets/img/Component4.webp"
+                  loading="lazy"
+                  alt="تعلم عملي بالمشاريع"
+                  class="cursor-pointer"
+                />
+              </li>
+
+              <li class="w-20 md:w-32 h-20 md:h-32">
+                <img
+                  src="assets/img/Component2.webp"
+                  loading="lazy"
+                  alt="متابعة وتقييم مستمر"
+                  class="cursor-pointer"
+                />
+              </li>
+
+              <li class="w-20 md:w-32 h-20 md:h-32">
+                <img
+                  src="assets/img/Component3.webp"
+                  loading="lazy"
+                  alt="جلسات تدريب تفاعلية"
+                  class="cursor-pointer"
+                />
+              </li>
+
+              <li class="w-20 md:w-32 h-20 md:h-32">
+                <img
+                  src="assets/img/Component1.webp"
+                  loading="lazy"
+                  alt="شهادات معتمدة"
+                  class="cursor-pointer"
+                />
+              </li>
+            </ul>
+          </div>
+          <!-- content -->
+          <div
+            class="flex flex-row gap-32 justify-between items-center relative my-8 mx-8"
+          >
+            <!-- Text content  -->
+            <div class="text-content text-right gap-4">
+              <h1 class="md:text-[30px] text-[18px]">
+                بذرة النينجا بداية تكوين النينجا الرقمي :
+              </h1>
+              <p class="md:text-lg text-base font-semibold my-2">
+                هذه المرحلة لطلاب الصف الأول حتى الثالث الابتدائي .
+              </p>
+              <p
+                class="md:text-[30px] font-bold text-[18px] flex flex-row items-center gap-2"
+              >
+                <img
+                  src="assets/img/icon-text-skills1.svg"
+                  alt="img text"
+                  loading="lazy"
+                />
+                هدف المرحلة:
+              </p>
+              <p class="md:text-lg text-base font-semibold my-2">
+                نضع الأساس لفهم البرمجة والتكنولوجيا عبر تجربة تعليمية قائمة على
+                اللعب والاستكشاف، ليتعلّم الطفل التفكير كمبرمج، ويحوّل أفكاره
+                إلى إبداع رقمي هادف.
+              </p>
+              <p
+                class="md:text-[30px] font-bold text-[18px] flex flex-row items-center gap-2"
+              >
+                <img
+                  src="assets/img/task-list-pin-skllis.svg"
+                  alt="img text"
+                  loading="lazy"
+                />
+                المحتوى العملي لهذه المرحلة :
+              </p>
+            </div>
+            <!-- img content  -->
+            <div class="img-content hidden md:block w-1/3 h-1/3">
+              <img
+                src="assets/img/ninja-seed.webp"
+                alt="ninja boy"
+                class="w-full h-full object-contain"
+                loading="lazy"
+              />
+            </div>
+          </div>
+          <!-- splide -->
+          <div id="splide" class="splide">
+            <div class="splide__track">
+              <ul class="splide__list">
+                <li class="splide__slide">
+                  <img
+                    src="assets/img/slider.webp"
+                    loading="lazy"
+                    alt="تعلم عملي بالمشاريع"
+                  />
+                </li>
+                <li class="splide__slide">
+                  <img
+                    src="assets/img/slider2.webp"
+                    loading="lazy"
+                    alt="تعلم عملي بالمشاريع"
+                  />
+                </li>
+                <li class="splide__slide">
+                  <img
+                    src="assets/img/slider3.webp"
+                    loading="lazy"
+                    alt="تعلم عملي بالمشاريع"
+                  />
+                </li>
+                <li class="splide__slide">
+                  <img
+                    src="assets/img/slider4.webp"
+                    loading="lazy"
+                    alt="تعلم عملي بالمشاريع"
+                  />
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="flex justify-center py-6 items-center align-center">
+            <a
+              class="flex flex-row items-center btn button btn-primary button-pr btn-sm"
+            >
+              أبدأ رحلته الرقمية اليوم
+              <img
+                src="assets/img/ArrowLeft.svg"
+                class="bg-[var(--bg-rw)] rounded-full row-img"
+                alt=" arrow button"
+                loading="lazy"
+            /></a>
+          </div>
+        </div>
+      </section>
       <!-- End Section Skills  -->
       <!-- Start Section Videos  -->
       <section class="videos"></section>
@@ -285,9 +454,12 @@
     <!--Start Footer  -->
     <footer></footer>
     <!-- End Footer  -->
+
     <!-- flyonui.js  -->
     <script src="node_modules/flyonui/flyonui.js"></script>
     <!-- Javascript  -->
     <script src="script.js"></script>
+    <!-- splide -->
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
   </body>
 </html>
