--- a/index.html
+++ b/index.html
@@ -26,33 +26,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" />
     <!-- AlpineJs with defer for non-blocking -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <!-- Structured Data (JSON-LD) for SEO -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "EducationalOrganization",
-      "name": "Ninjaco",
-      "description": "منصة تعليمية متخصصة في البرمجة والتقنية للأطفال",
-      "url": "https://ninjaco.com",
-      "logo": "https://ninjaco.com/assets/img/logo.svg",
-      "sameAs": [
-        "https://www.facebook.com/ninjaco",
-        "https://www.instagram.com/ninjaco",
-        "https://twitter.com/ninjaco"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "contactType": "Customer Support",
-        "email": "info@ninjaco.com",
-        "telephone": "+20123456789"
-      },
-      "areaServed": "EG",
-      "courseCount": 10,
-      "priceRange": "$$"
-    }
-    </script>
   </head>
-  <body>
+  <body  class="bg-white text-black dark:bg-[#0F0F1A] dark:text-white transition 
+    bg-white dark:bg-[#1B1B2F] border dark:border-gray-700 transition
+  ">
     <!-- start Header  -->
     <header class="w-full py-6 relative z-50" x-data="{ open: false } ">
        <div
@@ -91,8 +68,15 @@
 
     <!-- Actions Desktop -->
     <div class="hidden md:flex items-center gap-3">
-    <!-- Theme Toggle -->
-      <button id="theme-toggle" class="btn btn-outline btn-sm rounded-full" aria-label="تبديل الوضع الليلي والنهاري" title="تبديل الوضع">🌙</button>
+    
+<!-- Theme Toggle -->
+<button
+  id="theme-toggle"
+  class="btn btn-outline btn-sm rounded-full transition"
+  aria-label="Toggle theme"
+>
+  🌙
+</button>
     <a class="hidden md:flex flex-row items-center btn button btn-primary bg-white text-[var(--text-color)] btn-sm" href="#" aria-label="انضم إلى نينجاكو الآن">
       انضم الي نينجاكو 
     <img src="assets/img/ArrowLeft.svg" class="bg-[var(--bg-rw)] rounded-full row-img" alt=" arrow button" loading="lazy" /></a>
@@ -136,7 +120,7 @@
     </header>
 
     <!-- End Header  -->
-    <main class="w-full bg-[#EBEAF3]">
+    <main class="w-full bg-[#EBEAF3]  ">
       <!-- Start Section Hero  -->
       <section id=" hero" class="hero relative">
         <img
